Use layoutlib coroutine dispatcher in screenshot plugin
In order to support coroutines when rendering a screenshot, a coroutine
dispatcher must be provided. Just as in Studio, this ensures that the
layoutlib coroutine dispatcher is used.

Fixes: 373068421
Test: test added
Change-Id: I47daf08c6297019fe66ea2877bb1756baebcc7bb